# reproducible-ml-template

./: README.md  add_local_project_to_githb_demo.md  black_tool_demo.md  configure_pycharm_sourceTree_demo.md  cookiecutter.json  create_poetry_interpreter_from_toml_demo.md  orchestration.md  pre_commit_demo.md  prefect_demo.md  setting_mypy_demo.md  setting_up_makefile_demo.md
test_module_explanation/src/: process.py
test_module_explanation/test/: conftest.py
{{cookiecutter.repo_name}}/: .gitignore  .pre-commit-config.yaml  Makefile  delete_me.py  pyproject.toml  typing_hints.py
{{cookiecutter.repo_name}}/.devcontainer/: devcontainer.env  devcontainer.json  devcontainer.local.env  install_post_create_dependencies.sh
{{cookiecutter.repo_name}}/tests/: conftest.py  test_delete_me.py
