[tool.poetry]
name = "{{cookiecutter.repo_name}}"
version = "0.1.0"
description = ""
authors =["{{cookiecutter.author_name}}"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.5.2"
numpy = "^1.23.5"
pyarrow = "^11.0.0"
cryptography = "^40.0.1"
sqlalchemy = ">=1.4.47,<1.5.0"
pyodbc = "^4.0.35"
pyyaml = "^6.0.1"
requests = "^2.31.0"
typing-extensions = "4.5.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "^22.12.0" }
isort = "^5.11.4"
mypy = "^0.991"
flake8 = "^5.0.4"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
jupyter = "^1.0.0"
jupyterlab = "^3.6.3"
ipython = "^8.12.0"
nbstripout = "^0.6.1"
ipykernel = "^6.20.2"
ipywidgets = "^8.0"
commitizen = "^3.13.0"
pre-commit = "*"

[tool.poetry.group.training]
optional = true

[tool.poetry.group.training.dependencies]
scikit-learn = ">=0.22.1,<1.2.1"


[tool.poetry.group.pipelines]
optional = true

[tool.poetry.group.pipelines.dependencies]
mlflow = "^2.1.1"
kedro-azureml = "^0.3.4"
kedro-docker = "^0.3.1"
adlfs = "^2023.1.0"
azureml-core = "^1.48.0"
azureml-mlflow = "^1.48.0"

[tool.poetry.group.azure]
optional = true

[tool.poetry.group.azure.dependencies]
azure-core = "^1.26.3"
azure-identity = "^1.12.0"
azure-keyvault-secrets = "^4.6.0"
azure-storage-blob = "^12.3.1"
opencensus-ext-azure = "^1.1.8"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.mypy]
strict = true

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/bim_ai -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.isort]
profile = "black"
line_length = 5000

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"